Webkit doesn't calculate padding-top/-bottom in % correctly when parent has padding https://bugs.webkit.org/show_bug.cgi?id=221202

Patch by Rob Buis <rbuis@igalia.com> on 2021-05-28
Reviewed by Manuel Rego Casasnovas.

LayoutTests/imported/w3c:

Add test for this.

* web-platform-tests/css/css-position/position-absolute-padding-percentage-expected.txt: Added.
* web-platform-tests/css/css-position/position-absolute-padding-percentage.html: Added.

Source/WebCore:

Absolute positioned elements should resolve %-ge padding against containing block padding-edge:
https://drafts.csswg.org/css-position-3/#absolute-positioning-containing-block

Test: imported/w3c/web-platform-tests/css/css-position/position-absolute-padding-percentage.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::containingBlockLogicalWidthForContent const):

Canonical link: https://commits.webkit.org/238237@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278194 268f45cc-cd09-0410-ab3c-d52691b4dbfc